chore(nft-vc) Add Cloud Storage hosting sample scripts and README.

--- a/.env.sample
+++ b/.env.sample
@@ -41,3 +41,9 @@ ISSUER_DID_PRD=""
 #   - private: refer to ./keys/wallet-private.dev.key
 PUBLIC_KEY=""
 PRIVATE_KEY=""
+
+# Issuer Bucket
+# If you hosting did.json and blockcerts.json to GCP Cloud Storage you can use this variables.
+# ex) gs://nft-vc-development.com
+GCS_BUCKET_NAME_DEVELOPMENT=""
+GCS_BUCKET_NAME_PRODCUTION=""
