chore(nft-vc) Add comment to .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,21 +1,24 @@
- # Ethereum: "rinkeby" or "goerli" or "mainnet"
- # Polygon: "polygonMumbai" or "polygon"
+# Use Ethereum chain: 
+#   development: "goerli"
+#   production: "mainnet"
+# Use Polygon chain: 
+#   development: "polygonMumbai"
+#   production: "polygon"
 NODE_ENV=""
 
-# set uploaded contract adress
+# Set uploaded contract adress. 
+#   ./README.md > ### NFT 発行フロー > 3. コントラクトのデプロイ
 CONTRACT_ADDRESS=""
 
 # www.alchemy.com (Ethereum)
 MAINNET_ALCHEMY_URL=""
-RINKEBY_ALCHEMY_URL=""
 GOERLI_ALCHEMY_URL=""
 # www.alchemy.com (Polygon)
 POLYGON_ALCHEMY_URL=""
 MUMBAI_ALCHEMY_URL=""
 
-# for cert-issuer in ropsten
-ROPSTEN_INFURA_URL="https://ropsten.infura.io/v3/<YOUR-API-KEY>"
-
+# IPFS adress for upload vc,nft,vc-image
+#   default: https://gateway.pinata.cloud/ipfs/
 # www.pinata.cloud
 PINATA_PRODUCTION_IPFS_URL_PREFIX=""
 PINATA_DEVELOPMENT_IPFS_URL_PREFIX=""
